<resources>
    <string name="app_name">Rent a Car</string>
    <string name="item_default_name">Nom de l\'article</string>
    <string name="item_default_price">0$</string>
    <string name="description_image">TODO</string>
    <string name="welcoming_text">Car Seller</string>
    <string name="testez_nos_voitures">Testez nos voitures</string>
    <string name="description">TO DO</string>
    <string name="merci">Merci</string>
    <string name="ma_description">ma description </string>
    <string name="mon_text" />
    <string name="text_test">text test</string>
</resources>
