<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_margin="10dp"
    android:id="@+id/adapter_item"
    android:layout_height="wrap_content"

    >

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="94dp"
        android:layout_height="60dp"
        android:contentDescription="@string/description_image" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_default_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_name"
            android:text="@string/item_default_price" />



    </RelativeLayout>

    <TextView
        android:id="@+id/item_description"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/mon_text"
        android:textColor="@color/white" />


</LinearLayout>